// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a CclHomeProductsBlockView component home-product style 1`] = `
<div
  className="home-products-container"
>
  <div
    className="home-product"
    id="home-product"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="home-product-title"
    >
      example title1
    </div>
    <div
      className="home-product-description"
    />
  </div>
  <div
    className="home-product"
    id="home-product"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="home-product-title"
    >
      example title2
    </div>
    <div
      className="home-product-description"
    />
  </div>
</div>
`;

exports[`renders a CclHomeProductsBlockView component iconless style 1`] = `
<div
  className="home-products-container"
>
  <div
    className="home-product home-product-main"
    id=""
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h3>
      example title1
    </h3>
  </div>
  <div
    className="home-product home-product-main"
    id=""
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h3>
      example title2
    </h3>
  </div>
</div>
`;
